I have began to add in the login and sign up sheet.

--- a/telephasic/left-sidebar.html
+++ b/telephasic/left-sidebar.html
@@ -24,20 +24,12 @@
     <h1 id="logo"><a href="index.html">Cosmetics</a></h1>
     <nav id="nav">
       <ul>
-        <li> <a href="">Dropdown</a>
+        <li> <a href="">Sign Up</a>
           <ul>
-            <li><a href="#">Lorem ipsum dolor</a></li>
-            <li><a href="#">Magna phasellus</a></li>
-            <li><a href="#">Etiam dolore nisl</a></li>
-            <li> <span>Phasellus consequat</span>
-              <ul>
-                <li><a href="#">Lorem ipsum dolor</a></li>
-                <li><a href="#">Phasellus consequat</a></li>
-                <li><a href="#">Magna phasellus</a></li>
-                <li><a href="#">Etiam dolore nisl</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Veroeros feugiat</a></li>
+            <li><a href="Sign%20Up.html">Sign Up</a></li>
+            <li><a href="Login.html">Login</a></li>
+            <li><a href="#">Makeup Subscription</a></li>
+            <li><a href="#">Hair Subscription</a></li>
           </ul>
         </li>
         <li><a href="left-sidebar.html">Makeup</a></li>
