Added things to all pages

--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -21,7 +21,7 @@
 <body class="left-sidebar">
 <div id="header-wrapper">
   <div id="header" class="container">
-    <h1 id="logo"><a href="index.html">MoMo Box</a></h1>
+    <h1 id="logo"><a href="index.html">Cosmetics</a></h1>
     <nav id="nav">
       <ul>
         <li> <a href="">Sign Up</a>
@@ -68,7 +68,7 @@
         <article id="content">
           <header>
             <h2>Makeup Subscription</h2>
-            <span>Do you desire to receive presents every month? Then subscribe for a MoMo Makeup Box.</span> </header>
+            <span>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit dolor neque semper magna lorem ipsum.</span> </header>
           <a href="#" class="image full"><img src="http://www.beauty-cosmetics.us/images/BC/7.png" alt=""></a>
           <p>Ut sed tortor luctus, gravida nibh eget, volutpat odio. Proin rhoncus, sapien mollis luctus hendrerit, orci dui viverra metus, et cursus nulla mi sed elit. Vestibulum condimentum, mauris a mattis vestibulum, urna mauris cursus lorem, eu fringilla lacus ante non est. Nullam vitae feugiat libero, eu consequat sem. Proin tincidunt neque eros. Duis faucibus blandit ligula, mollis commodo risus sodales at. Sed rutrum et turpis vel blandit. Nullam ornare congue massa, at commodo nunc venenatis varius. Praesent mollis nisi at vestibulum aliquet. Sed sagittis congue urna ac consectetur.</p>
           <p>Mauris eleifend eleifend felis aliquet ornare. Vestibulum porta velit at elementum gravida nibh eget, volutpat odio. Proin rhoncus, sapien mollis luctus hendrerit, orci dui viverra metus, et cursus nulla mi sed elit. Vestibulum condimentum, mauris a mattis vestibulum, urna mauris cursus lorem, eu fringilla lacus ante non est. Nullam vitae feugiat libero, eu consequat sem. Proin tincidunt neque eros. Duis faucibus blandit ligula, mollis commodo risus sodales at. Sed rutrum et turpis vel blandit. Nullam ornare congue massa, at commodo nunc venenatis varius. Praesent mollis nisi at vestibulum aliquet. Sed sagittis congue urna ac consectetur.</p>
@@ -76,30 +76,35 @@
         </article>
       </div>
     </div>
-    <div class="wrapper">
-      <section class="container">
-        <header class="major">
-          <h2>Our Amazing Reviews</h2>
+    <div class="row features">
+      <section class="4u feature">
+        <div class="image-wrapper first"> <a href="#" class="image full"><img src="images/pic03.jpg" alt=""></a> </div>
+        <header>
+          <h3>Dolor sit consequat magna</h3>
         </header>
-        <div class="row features">
-          <section class="4u feature">
-            <div class="image-wrapper first"> <a href="#" class="image full"><img src="http://data.whicdn.com/images/9647663/large.jpg" alt=""></a> </div>
-            <h2>Katie</h2>
-            <p>"I really adore your products!"</p>
-          </section>
-          <section class="4u feature">
-            <div class="image-wrapper"> <a href="#" class="image full"><img src="http://www.themakeuproom.com/MakeupReviews_files/P1010151.jpg" height="350" alt=""></a> </div>
-            <h2>Pie123</h2>
-            <p>"Oh My Gosh!! These products are simply amazing! Im sooo on Team Makeup!"</p>
-          </section>
-          <section class="4u feature">
-            <div class="image-wrapper"> <a href="#" class="image full"><img src="https://i.ytimg.com/vi/rhgxNNvcbtg/maxresdefault.jpg" height="347" alt=""></a> </div>
-            <h2>2Cute4U</h2>
-            <p>"The makeup is decorated so sugoi in the box!! (´∀｀)♡"</p>
-          </section>
-        </div>
-        <ul class="actions major">
-          <li><a href="http://www.dictionary.com/browse/lie" class="button">More Reviews</a></li>
+        <p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel sem sit dolor neque semper magna lorem ipsum.</p>
+        <ul class="actions">
+          <li><a href="#" class="button">Elevate my awareness</a></li>
+        </ul>
+      </section>
+      <section class="4u feature">
+        <div class="image-wrapper"> <a href="#" class="image full"><img src="images/pic04.jpg" alt=""></a> </div>
+        <header>
+          <h3>Dolor sit consequat magna</h3>
+        </header>
+        <p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel sem sit dolor neque semper magna lorem ipsum.</p>
+        <ul class="actions">
+          <li><a href="#" class="button">Elevate my awareness</a></li>
+        </ul>
+      </section>
+      <section class="4u feature">
+        <div class="image-wrapper"> <a href="#" class="image full"><img src="images/pic05.jpg" alt=""></a> </div>
+        <header>
+          <h3>Dolor sit consequat magna</h3>
+        </header>
+        <p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel sem sit dolor neque semper magna lorem ipsum.</p>
+        <ul class="actions">
+          <li><a href="#" class="button">Elevate my awareness</a></li>
         </ul>
       </section>
     </div>
