--- a/telephasic/Login.html
+++ b/telephasic/Login.html
@@ -21,7 +21,7 @@
 <body class="right-sidebar">
 <div id="header-wrapper">
     <div id="header" class="container">
-        <h1 id="logo"><a href="index.html">Cosmetics</a></h1>
+        <h1 id="logo"><a href="index.html">MoMo Box</a></h1>
         <nav id="nav">
             <ul>
                 <li> <a href="">Sign Up</a>
@@ -39,5 +39,31 @@
         </nav>
     </div>
 </div>
+<!-- Sign Up Info -->
+<section class="6u">
+    <form method="post" action="#">
+        <div class="row half">
+            <div class="6u">
+                <input name="name" placeholder="Name" type="text" class="text">
+            </div>
+            <div class="6u">
+                <input name="email" placeholder="Email" type="text" class="text">
+            </div>
+        </div>
+        <div class="row half">
+            <div class="6u">
+                <input name="Password" placeholder="Password" type="text" class="text">
+            </div>
+        </div>
+        <div class="row half">
+            <div class="12u">
+                <ul class="actions">
+                    <li><a href="#" class="button">Login</a></li>
+                </ul>
+            </div>
+        </div>
+    </form>
+</section>
+
 </body>
 </html>
