--- a/telephasic/no-sidebar.html
+++ b/telephasic/no-sidebar.html
@@ -21,7 +21,7 @@
 <body class="no-sidebar">
 <div id="header-wrapper">
   <div id="header" class="container">
-    <h1 id="logo"><a href="index.html">Cosmetics</a></h1>
+    <h1 id="logo"><a href="index.html">MoMo Box</a></h1>
     <nav id="nav">
       <ul>
         <li> <a href="">Sign Up</a>
