--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Cosmetic</title>
+<title>MoMo Box</title>
 <meta charset="utf-8">
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600" rel="stylesheet" type="text/css">
 <!--[if lte IE 8]>
@@ -21,12 +21,12 @@
 <body class="homepage">
 <div id="header-wrapper">
   <div id="header" class="container">
-    <h1 id="logo"><a href="index.html">Cosmetics</a></h1>
+    <h1 id="logo"><a href="index.html">MoMo Box</a></h1>
     <nav id="nav">
       <ul>
         <li> <a href="">Sign Up</a>
           <ul>
-            <li><a href="Sign%20Up.html">Sign Up</a></li>
+            <li><a href="Sign%20Up.php">Sign Up</a></li>
             <li><a href="Login.html">Login</a></li>
             <li><a href="#">Makeup Subscription</a></li>
             <li><a href="#">Hair Subscription</a></li>
@@ -78,8 +78,8 @@
 </div>
 <div id="promo-wrapper">
   <section id="promo">
-    <h2>Neque semper magna et lorem ipsum adipiscing</h2>
-    <a href="#" class="button">Breach the thresholds</a> </section>
+    <h2>Why not subscribe today? </h2>
+    <a href="#" class="button">Monthly Box</a> </section>
 </div>
 <div class="wrapper">
   <section class="container">
@@ -161,4 +161,9 @@
   </div>
 </div>
 </body>
+
+
+
+
+
 </html>
