--- a/Sign Up.html
+++ b/Sign Up.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Telephasic | Hair</title>
+    <title>MoMo | Hair</title>
     <meta charset="utf-8">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600" rel="stylesheet" type="text/css">
     <!--[if lte IE 8]>
@@ -21,12 +21,12 @@
 <body class="right-sidebar">
 <div id="header-wrapper">
     <div id="header" class="container">
-        <h1 id="logo"><a href="index.html">Cosmetics</a></h1>
+        <h1 id="logo"><a href="index.html">MoMo Box</a></h1>
         <nav id="nav">
             <ul>
                 <li> <a href="">Sign Up</a>
                     <ul>
-                        <li><a href="Sign%20Up.html">Sign Up</a></li>
+                        <li><a href="Sign%20Up.php">Sign Up</a></li>
                         <li><a href="Login.html">Login</a></li>
                         <li><a href="#">Makeup Subscription</a></li>
                         <li><a href="#">Hair Subscription</a></li>
@@ -39,5 +39,31 @@
         </nav>
     </div>
 </div>
+<!-- Sign Up Info -->
+<section class="6u">
+    <form method="post" action="#">
+        <div class="row half">
+            <div class="6u">
+                <input name="name" placeholder="Name" type="text" class="text">
+            </div>
+            <div class="6u">
+                <input name="email" placeholder="Email" type="text" class="text">
+            </div>
+        </div>
+        <div class="row half">
+            <div class="6u">
+                <input name="Password" placeholder="Password" type="text" class="text">
+            </div>
+        </div>
+        <div class="row half">
+            <div class="12u">
+                <ul class="actions">
+                    <li><a href="#" class="button">Sign Up</a></li>
+                </ul>
+            </div>
+        </div>
+    </form>
+</section>
+
 </body>
 </html>
