--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Telephasic | About Us</title>
+<title>MoMo | About Us</title>
 <meta charset="utf-8">
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600" rel="stylesheet" type="text/css">
 <!--[if lte IE 8]>
@@ -21,12 +21,12 @@
 <body class="no-sidebar">
 <div id="header-wrapper">
   <div id="header" class="container">
-    <h1 id="logo"><a href="index.html">Cosmetics</a></h1>
+    <h1 id="logo"><a href="index.html">MoMo Box</a></h1>
     <nav id="nav">
       <ul>
         <li> <a href="">Sign Up</a>
           <ul>
-            <li><a href="Sign%20Up.html">Sign Up</a></li>
+            <li><a href="Sign%20Up.php">Sign Up</a></li>
             <li><a href="Login.html">Login</a></li>
             <li><a href="#">Makeup Subscription</a></li>
             <li><a href="#">Hair Subscription</a></li>
