--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -48,8 +48,8 @@
             <!-- TITLE OF PAGE -->
             <h2>About Us</h2>
             <span>What We Strive For</span> </header>
-          <a href="#" class="image full"><img src="http://www.iran-daily.com/File/File/66332" alt=""></a>
-          <p>Ut sed tortor luctus, gravida nibh eget, volutpat odio. Proin rhoncus, sapien mollis luctus hendrerit, orci dui viverra metus, et cursus nulla mi sed elit. Vestibulum condimentum, mauris a mattis vestibulum, urna mauris cursus lorem, eu fringilla lacus ante non est. Nullam vitae feugiat libero, eu consequat sem. Proin tincidunt neque eros. Duis faucibus blandit ligula, mollis commodo risus sodales at. Sed rutrum et turpis vel blandit. Nullam ornare congue massa, at commodo nunc venenatis varius. Praesent mollis nisi at vestibulum aliquet. Sed sagittis congue urna ac consectetur.</p>
+          <a href="#" class="image full"><img src="http://spotstore.net/media/catalog/product/cache/4/image/9df78eab33525d08d6e5fb8d27136e95/c/o/cosmetic_produkt_3_1392122374.png" alt=""></a>
+          <p>Our goal as a company is to make makeup and hair products accesible thoughout the world. With subscribing not only do you as a customer gain amazing name brand products, but a gift that you deserve.</p>
           <p>Mauris eleifend eleifend felis aliquet ornare. Vestibulum porta velit at elementum gravida nibh eget, volutpat odio. Proin rhoncus, sapien mollis luctus hendrerit, orci dui viverra metus, et cursus nulla mi sed elit. Vestibulum condimentum, mauris a mattis vestibulum, urna mauris cursus lorem, eu fringilla lacus ante non est. Nullam vitae feugiat libero, eu consequat sem. Proin tincidunt neque eros. Duis faucibus blandit ligula, mollis commodo risus sodales at. Sed rutrum et turpis vel blandit. Nullam ornare congue massa, at commodo nunc venenatis varius. Praesent mollis nisi at vestibulum aliquet. Sed sagittis congue urna ac consectetur.</p>
           <p>Vestibulum pellentesque posuere lorem non aliquam. Mauris eleifend eleifend felis aliquet ornare. Vestibulum porta velit at elementum elementum.</p>
         </article>
@@ -92,9 +92,8 @@
 <div id="footer-wrapper">
   <div id="footer" class="container">
     <header class="major">
-      <h2>Euismod aliquam vehicula lorem</h2>
-      <span>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel sem sit<br>
-      dolor neque semper magna lorem ipsum feugiat veroeros lorem ipsum dolore.</span> </header>
+      <h2>Want To Rate Our Box?</h2>
+      <span>Give us a review and share MoMo Box with friends and family.</span> </header>
     <div class="row">
       <section class="6u">
         <form method="post" action="#">
@@ -139,8 +138,7 @@
   </div>
   <div id="copyright" class="container">
     <ul class="menu">
-      <li>&copy; Untitled. All rights reserved.</li>
-      <li>Design: <a href="http://html5up.net/">HTML5 UP</a></li>
+      <li>&copy; MoMo Box. All rights reserved.</li>
     </ul>
   </div>
 </div>
